# ASCII_Atr_Maker

./: .gitignore  LICENSE  README.md  desktop_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: main.py
src/core/: app_logic.py  converter.py  photo_converter.py
src/ui/: app_ui.py
