[project]
name = "AsciiArtMaker"
version = "1.0.0"
description = "Приложение, основанное на Flet, для конвертации фото в ASCII рисунок (фото, состоящее из символов)."
readme = "README.md"
license-files = [
    "LICENSE",
]
requires-python = ">=3.10"
authors = [
    {name = "MrRighter", email = ""}
]
dependencies = [
    "flet>=0.80.2",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.2",
]

[tool.flet]
org = "MrRighter"
product = "ASCII Art Maker"
company = "MrRighter"
copyright = "Copyright (C) 2026 by MrRighter"

[tool.flet.app]
path = "src"
